--- a/RetroGameLog.Application/RetroGameLog.Application.csproj
+++ b/RetroGameLog.Application/RetroGameLog.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="MediatR" Version="13.0.0" />
   </ItemGroup>
 
