Add Infrastructure layer to solution

--- a/RetroGameLog.Application/RetroGameLog.Application.csproj
+++ b/RetroGameLog.Application/RetroGameLog.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Users\CreateUser\CreateUserCommandValidator.cs~RF6b58ca46.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
