--- a/RetroGameLog.Infrastructure/RetroGameLog.Infrastructure.csproj
+++ b/RetroGameLog.Infrastructure/RetroGameLog.Infrastructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RetroGameLog.Application\RetroGameLog.Application.csproj" />
+  </ItemGroup>
+
 </Project>
