--- a/RetroGameLog.Infrastructure/RetroGameLog.Infrastructure.csproj
+++ b/RetroGameLog.Infrastructure/RetroGameLog.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
   </ItemGroup>
 
