Scaffolding docker into project

--- a/RetroGameLog.API/RetroGameLog.API.csproj
+++ b/RetroGameLog.API/RetroGameLog.API.csproj
@@ -6,15 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>c21d474d-556e-4d1e-9bce-b84ffc47773d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
