--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=sqlserver,1433;Database=RetroGameLog;UserId=sa;Password=Admin@1234;TrustServerCertificate=True;"
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
