Docker configuration into the project

--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=sqlserver,1433;Database=RetroGameLog;UserId=sa;Password=Admin@1234;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=mssql,1433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;"
   },
-
 
   "Logging": {
     "LogLevel": {
