--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=mssql,1433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;"
+    "DatabaseConnection": "Server=localhost,11433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;"
   },
+
 
   "Logging": {
     "LogLevel": {
