add GlobalExceptionMiddleware to presentation layer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
       dockerfile: RetroGameLog.API/Dockerfile
+    depends_on:
+        - mssql
 
   mssql:
      image: mcr.microsoft.com/mssql/server:2022-latest
