--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,11 +2,9 @@ services:
   retrogamelog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=4545
-      - ASPNETCORE_HTTPS_PORTS=4546
+      - ASPNETCORE_URLS=http://0.0.0.0:8080
     ports:
-      - "4545"
-      - "4546"
+      - "4545:8080"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
