add KeyCloak settings to application settings environment

--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -9,5 +9,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "Authentication": {
+    "Audience": "retrogamelog-api",
+    "ValidIssuer": "http://localhost:8080/realms/retrogamelog",
+    "MetadataUrl": "http://localhost:8080/realms/retrogamelog/.well-known/openid-configuration",
+    "RequireHttpsMetadata": false
   }
 }
