--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -1,6 +1,10 @@
 {
+  //"ConnectionStrings": {
+  //  "DatabaseConnection": "Server=localhost,11433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;"
+  //},
+
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=localhost,11433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;"
+    "DatabaseConnection": "Server=mssql,1433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;"
   },
 
 
@@ -13,8 +17,17 @@
 
   "Authentication": {
     "Audience": "retrogamelog-api",
-    "ValidIssuer": "http://localhost:8080/realms/retrogamelog",
-    "MetadataUrl": "http://localhost:8080/realms/retrogamelog/.well-known/openid-configuration",
+    "ValidIssuer": "http://retrogamelogidp:8080/realms/RetroGameLog/",
+    "MetadataUrl": "http://retrogamelogidp:8080/realms/RetroGameLog/.well-known/openid-configuration",
     "RequireHttpsMetadata": false
+  },
+
+  "KeyCloak": {
+    "AdminUrl": "http://retrogamelogidp:8080/admin/realms/RetroGameLog/",
+    "TokenUrl": "http://retrogamelogidp:8080/realms/RetroGameLog/protocol/openid-connect/token",
+    "AdminClientId": "retro_admin_auth_client",
+    "AdminClientSecret": "E4B7OpdOzz1aBHrj08UGJ2cT44Nacdta",
+    "AuthClientId": "retro_auth_client",
+    "AuthClientSecret": "UMNUtTSd6jAhXcnRwexbxPCmpxprqtrb"
   }
 }
