add Role entity

--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -16,8 +16,8 @@
   },
 
   "Authentication": {
-    "Audience": "retrogamelog-api",
-    "ValidIssuer": "http://retrogamelogidp:8080/realms/RetroGameLog/",
+    "Audience": "retro_auth_client",
+    "ValidIssuer": "http://retrogamelogidp:8080/realms/RetroGameLog",
     "MetadataUrl": "http://retrogamelogidp:8080/realms/RetroGameLog/.well-known/openid-configuration",
     "RequireHttpsMetadata": false
   },
