--- a/RetroGameLog.API/appsettings.Development.json
+++ b/RetroGameLog.API/appsettings.Development.json
@@ -4,7 +4,8 @@
   //},
 
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=mssql,1433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;"
+    "DatabaseConnection": "Server=mssql,1433;Database=RetroGameLog;User Id=sa;Password=Admin@1234;TrustServerCertificate=True;Encrypt=False;",
+    "Cache": "bookify-redis:6379"
   },
 
 
